RESOLVED FIXED98190
[BlackBerry] Prevent window.close() from closing a page that is not opened by JS
https://bugs.webkit.org/show_bug.cgi?id=98190
Summary [BlackBerry] Prevent window.close() from closing a page that is not opened by JS
Yong Li
Reported 2012-10-02 12:41:14 PDT
.
Attachments
the patch (1.44 KB, patch)
2012-10-02 12:47 PDT, Yong Li
no flags
Yong Li
Comment 1 2012-10-02 12:47:12 PDT
Created attachment 166735 [details] the patch
WebKit Review Bot
Comment 2 2012-10-02 13:42:06 PDT
Comment on attachment 166735 [details] the patch Clearing flags on attachment: 166735 Committed r130204: <http://trac.webkit.org/changeset/130204>
WebKit Review Bot
Comment 3 2012-10-02 13:42:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.