[BlackBerry] Prevent window.close() from closing pages that are not opened by JS https://bugs.webkit.org/show_bug.cgi?id=98190

Reviewed by Antonio Gomes.

RIM PR# 217812.
Only pages opened by JS can be closed by JS.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::closeWindowSoon):


git-svn-id: svn://svn.chromium.org/blink/trunk@130204 bbb929c8-8fbe-4397-9dbb-9b2b20218538