third_party/WebKit/Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.cpp
@@ -393,7 +393,8 @@ bool ChromeClientBlackBerry::runBeforeUnloadConfirmPanel(const String& message, 
 
 void ChromeClientBlackBerry::closeWindowSoon()
 {
-    m_webPagePrivate->m_client->scheduleCloseWindow();
+    if (m_webPagePrivate->m_page->openedByDOM())
+        m_webPagePrivate->m_client->scheduleCloseWindow();
 }
 
 void ChromeClientBlackBerry::setStatusbarText(const String& status)
